--- a/src/Components/Home/Header.css
+++ b/src/Components/Home/Header.css
@@ -1,3 +1,12 @@
+/* .profile-container{
+    background-image: url("/public/banner.png");
+    padding: 0;
+    height: 100%;
+} */
+* {
+    margin-bottom: 0;
+}
+
 .btn {
     margin: 0px 10px 0px 5px;
 }
@@ -7,7 +16,7 @@ html {
 }
 
 .navlogo {
-    margin-right: 8px;
+    margin-right: 15px;
     margin-bottom: 0;
 }
 
@@ -19,8 +28,3 @@ html {
     font-size: 18px;
     font-weight: 500;
 }
-
-/*  */
-
-
-
